# bel-commons

./: .bumpversion.cfg  .dockerignore  .flake8  .gitignore  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  LICENSE  MANIFEST.in  README.md  README.rst  alembic.ini  docker-compose.yml  mypy.ini  requirements.txt  setup.cfg  setup.py  tox.ini
alembic/: env.py
alembic/versions/: 6ac176851dd4_initial_revision.py
docs/: Makefile
docs/source/: conf.py  configuration.rst  docker.rst  index.rst  installation.rst  pages.rst  web.rst
migrations/: env.py  script.py.mako
migrations/versions/: a69a0a842493_initial.py
resources/: README.rst  load_bel_commons.sh  load_experiments.py  load_networks.py  load_omics.py
resources/GSE1297/: ModerateAD.csv  README.rst
resources/GSE28146/: EarlyAD.csv  ModAD.csv  README.rst  metadata.json
slim/: Dockerfile  bcs.py  docker-compose.yml
slim/templates/: base.html  index.html  network.html
src/bel_commons/: __init__.py  __main__.py  admin_model_views.py  application.py  application_utils.py  celery_utils.py  celery_worker.py  cli.py  config.py  constants.py  converters.py  database_service.py  explorer_toolbox.py  ext.py  forms.py  main_service.py  manager.py  manager_base.py  manager_utils.py  models.py  send_utils.py  slim.py  tools_compat.py  utils.py  version.py  wsgi.py
src/bel_commons/core/: __init__.py  celery.py  flask_bio2bel.py  models.py  proxies.py  sqlalchemy.py
src/bel_commons/resources/: __init__.py  constants.py  load_alzheimers.py  load_experiments.py  load_networks.py  load_omics.py
src/bel_commons/static/css/: d3.parcoords.css  graph.css
src/bel_commons/templates/: base.html  email_report.html  footer.html  footer_text.html  generic_form.html  index.html  macros.html  nav.html  parser.html
src/bel_commons/templates/admin/: index.html
src/bel_commons/templates/citation/: citation.html  citations.html
src/bel_commons/templates/curation/: merge_namespaces.html  ols_suggestion.html
src/bel_commons/templates/edge/: edge.html  edges.html
src/bel_commons/templates/evidence/: evidence.html  evidence_list.html  evidences.html
src/bel_commons/templates/experiment/: experiment.html  experiments_compare.html
src/bel_commons/templates/help/: get_geo_dgx.html  index.html  tutorial.html
src/bel_commons/templates/meta/: about.html
src/bel_commons/templates/namespace/: namespace.html  namespace_entry.html  namespaces.html
src/bel_commons/templates/network/: explorer.html  network.html  network_comparison.html  networks.html  summarize_biogrammar.html  summarize_completeness.html
src/bel_commons/templates/node/: node.html  nodes.html
src/bel_commons/templates/query/: queries.html  query.html  query_builder.html
src/bel_commons/templates/security/: login_user.html  register_user.html
src/bel_commons/templates/slim/: base.html  index.html  network.html
src/bel_commons/templates/user/: user.html  users.html
src/bel_commons/views/: __init__.py  curation.py  experiment_service.py  external_services.py  help.py  parser_endpoint.py  receiving.py  reporting.py  uploading.py
src/pybel_web/: __init__.py  __main__.py  admin_model_views.py  admin_service.py  admin_tools.py  admin_utils.py  analysis_service.py  analysis_utils.py  application.py  application_utils.py  belief_service.py  bms_service.py  celery_utils.py  celery_worker.py  cli.py  config.py  constants.py  curation_service.py  database_service.py  explorer_toolbox.py  external_managers.py  external_services.py  forms.py  graph_utils.py  main_service.py  manager.py  manager_base.py  manager_utils.py  models.py  mozg_service.py  mozg_service_utils.py  parser_async_service.py  parser_endpoint.py  parser_service.py  parser_sync_service.py  proxies.py  reporting_service.py  run.py  send_utils.py  upload_service.py  (+2 more)
src/pybel_web/content/: __init__.py  get_or_404_with_proxy.py  safe.py
src/pybel_web/core/: __init__.py  celery.py  flask_bio2bel.py  models.py  proxies.py  sqlalchemy.py
src/pybel_web/resources/: __init__.py  constants.py  load_alzheimers.py  load_experiments.py  load_networks.py  load_omics.py
src/pybel_web/resources/GSE1297/: GSE1297_moderate.tsv  GSE1297_severe.tsv  IncipientAD.csv  README.rst  SevereAD.csv  incipient.tsv  metadata.json  process.R  process.r
src/pybel_web/resources/GSE28146/: GSE28146_moderate.tsv  GSE28146_severe.tsv  README.rst  SevAD.csv  incipient.tsv  metadata.json  process.R
src/pybel_web/resources/GSE63063/: AD_GSE63063_GPL10558.tsv  GSE63063_GPL10558_MCI.tsv  GSE63063_GPL6947_AD.tsv  MCI_GSE63063_GPL6947.tsv  README.rst  metadata.json  process.R
src/pybel_web/resources/users/: __init__.py  default_users.json
src/pybel_web/static/css/: graph.css  nav.css
src/pybel_web/static/js/: d3.parcoords.js
src/pybel_web/static/json/: swagger.json
src/pybel_web/templates/: 403.html  500.html  about.html  analysis_compare.html  analysis_list.html  analysis_results.html  analyze_dgx.html  analyze_dgx_tutorial.html  annotation.html  annotation_entries.html  annotation_entry.html  annotations.html  base.html  citation.html  citations.html  curate.html  definitions_list.html  deployment.html  edge.html  edge_macro.html  edges.html  email_report.html  evidence.html  evidence_list.html  evidences.html  experiment.html  experiment_macro.html  experiments.html  experiments_compare.html  explorer.html  footer.html  footer_text.html  google_analytics.html  help_download_format.html  help_parser.html  help_parsing_errors.html  how_to_use.html  imprint.html  index.html  macros.html  (+37 more)
src/pybel_web/templates/admin/: index.html  master.html
src/pybel_web/templates/citation/: citations.html
src/pybel_web/templates/curation/: boilerplate.html
src/pybel_web/views/: __init__.py  bms_service.py  curation.py  experiment_service.py  external_services.py  help.py  parser_endpoint.py  receiving.py  reporting.py  uploading.py
tests/: __init__.py  cases.py  constants.py  test_bel.gpickle  test_graph_utils.py  test_manager.py  test_mozg.py  test_permission.py  test_web.py  utils.py
(+53 files in other folders)
