##########################
# Setup.py Configuration #
##########################
[metadata]
name = pybel_web
version = 0.3.0-dev
description = A web application exposing core PyBEL functionalities
long_description = file: README.rst

# URLs
url = https://github.com/cthoyt/pybel-web
download_url = https://github.com/cthoyt/pybel-web/releases
project_urls =
    Bug Tracker = https://github.com/cthoyt/pybel-web/issues
    Source Code = https://github.com/cthoyt/pybel-web

# Author information
author = Charles Tapley Hoyt
author_email = charles.hoyt@scai.fraunhofer.de
maintainer = Charles Tapley Hoyt
maintainer_email = charles.hoyt@scai.fraunhofer.de

# License Information
license = Apache 2.0 License
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
keywords =
    Biological Expression Language
    BEL
    Systems Biology
    Networks Biology

[options]
install_requires =
    # PyBEL (on the bleeding edge)
    pybel @ git+https://www.github.com/pybel/pybel.git
    pybel-tools @ git+https://www.github.com/pybel/pybel-tools.git
    pybel-cx
    bio2bel @ git+https://www.github.com/bio2bel/bio2bel.git
    # Utilities
    requests
    click
    tqdm
    easy-config
    ols_client>=0.0.8
    networkx>=2.1
    # Scientific Python Stack
    pandas
    scikit-learn
    numpy
    # Backend
    sqlalchemy
    celery[redis]
    # Web server
    flask
    flask-bootstrap
    flask-wtf
    flask-security
    flask-admin
    flask-sqlalchemy
    werkzeug
    flasgger
    raven

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.7

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
bio2bel =
    bio2bel_hgnc
    bio2bel_chebi
    bio2bel_mirtarbase
    bio2bel_entrez
    bio2bel_expasy
    bio2bel_interpro
    bio2bel_go
external =
    flask-cors
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints

[options.entry_points]
console_scripts =
    pybel-web = pybel_web.cli:main
    bel-commons = pybel_web.cli:run
    bel-commons-worker = pybel_web.cli:worker

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = pybel_web
omit =
    tests/*
    docs/*
    scripts/*

[coverage:paths]
source =
    src/pybel_web
    .tox/*/lib/python*/site-packages/pybel_web

[coverage:report]
show_missing = True
exclude_lines =
    def __str__
    def __repr__

######################
# MyPy Configuration #
# (mypy.ini)         #
######################
[mypy]
no_implicit_optional = False

[mypy-colorama.*]
ignore_missing_imports = True

[mypy-setuptools.*]
ignore_missing_imports = True
