##########################
# Setup.py Configuration #
##########################
[metadata]
name = bel_commons
version = attr: src.bel_commons.version.VERSION
description = A web application exposing core PyBEL functionalities
long_description = file: README.rst

# URLs
url = https://github.com/bel-commons/bel-commons
download_url = https://github.com/bel-commons/bel-commons/releases
project_urls =
    Bug Tracker = https://github.com/bel-commons/bel-commons/issues
    Source Code = https://github.com/bel-commons/bel-commons

# Author information
author = Charles Tapley Hoyt
author_email = cthoyt@gmail.com
maintainer = Charles Tapley Hoyt
maintainer_email = cthoyt@gmail.com

# License Information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
keywords =
    Biological Expression Language
    BEL
    Systems Biology
    Networks Biology

[options]
install_requires =
    # PyBEL (on the bleeding edge)
    pybel==0.14.0
    pybel-tools @ git+https://www.github.com/pybel/pybel-tools.git@prepare-pybel-14
    bio2bel @ git+https://www.github.com/bio2bel/bio2bel.git@prepare-pybel-14
    # Utilities
    requests
    click
    tqdm
    easy-config
    dataclasses-json
    ols_client>=0.0.8
    networkx>=2.1
    # Scientific Python Stack
    pandas
    scikit-learn
    numpy
    # Backend
    sqlalchemy
    celery[redis]
    psycopg2-binary
    # Web server
    flask>=1.0.0
    flask-bootstrap
    flask-wtf
    flask-security
    flask-admin
    flask-sqlalchemy
    werkzeug
    flasgger
    raven

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.7

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
bio2bel =
    bio2bel_hgnc
    bio2bel_chebi
    bio2bel_mirtarbase
    bio2bel_entrez
    bio2bel_expasy
    bio2bel_interpro
    bio2bel_go
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints

[options.entry_points]
console_scripts =
    bel-commons = bel_commons.cli:main
    bel-commons-run = bel_commons.cli:run
    bel-commons-worker = bel_commons.cli:worker

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = bel_commons
omit =
    tests/*
    docs/*
    scripts/*

[coverage:paths]
source =
    src/bel_commons
    .tox/*/lib/python*/site-packages/bel_commons

[coverage:report]
show_missing = True
exclude_lines =
    def __str__
    def __repr__

######################
# MyPy Configuration #
# (mypy.ini)         #
######################
[mypy]
no_implicit_optional = False

[mypy-colorama.*]
ignore_missing_imports = True

[mypy-setuptools.*]
ignore_missing_imports = True
